Fix spacing in leash section

--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ a {
     flex-shrink: 1;
     font-weight: bold;
     font-size: 16px;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
     cursor: auto;
 }
 
@@ -91,7 +91,6 @@ p {
     background: #E76F51;
     color: #264653;
     display: flex;
-    justify-content: center;
 }
 
 .section-header.two {
@@ -105,9 +104,10 @@ p {
     display: flex;
     flex: 1;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     padding-bottom: 30px;
     gap: 15px;
+    width: 1000px;
 }
 
 .leash-card {
